fix form elements padding - fix minicart on secondary sidebars - fix menu dropdown elements - fix header non sticky z-index

--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -19,7 +19,7 @@ textarea {
     border-width: 1px 1px 1px 1px;
     border-style: solid;
     border-radius: 0;
-    padding: 5px;
+    padding: 10px;
     background-color: transparent;
     font-family: inherit;
     min-height: 35px;
