--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -133,6 +133,7 @@
     left: 0;
     right: 0;
     width: 100vw;
+    z-index: 1000;
 }
 
 // #Topbar
