--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -95,8 +95,8 @@
 
             a {
                 display: inline-block;
-                white-space: nowrap;
-                max-width: 200px;
+                width: 200px;
+                white-space: normal;
 
                 &:empty & {
                     display: none;
