--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Author: YITH
 Author URI: https://yithemes.com
 Description: Proteo is a sleek, modern and “Gutenberg-friendly” e-commerce theme. Developed with a beautiful UI and a minimal design, is perfect for each kind of shop. Easy to manage and to customize, Proteo is the best solution if you want a complete e-commerce template and start quickly to sell your products with WooCommerce without a technical knowledge. Use it also for corporate site or a blog: there are no limits about what you can do with a beautiful and usable theme like this! Main features: Colors and Typography customization (Google font support), Logo customization, 3 different Header layouts, Advanced customizer theme options, Sidebar Management, Sidebar Chooser on each page and product, Page title icons, Top Bar Management, Easy main color shade chooser, Buttons style management (gradient buttons support), Footer management with multiple sidebars, WooCommerce support, Shop Theme Options, Custom WooCommerce messages and animated WooCommerce alert notices, Two cart page layouts, Bootstrap grid system, CSS animations, Gutenberg support, Responsive, Fullscreen search, Multilevel menus, Support to all YITH plugins, SVG icons for HiDPI screens, Translation Ready. <a href="https://proteo.yithemes.com/about-proteo/" rel="nofollow" target="_blank">Discover more ></a> | <a href="https://proteo.yithemes.com/" rel="nofollow" target="_blank">Check our live demo ></a>
 
-Version: 1.0.10
+Version: 1.0.11
 License: GPLv2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: yith-proteo
@@ -5168,7 +5168,7 @@ textarea {
   border-width: 1px 1px 1px 1px;
   border-style: solid;
   border-radius: 0;
-  padding: 5px;
+  padding: 10px;
   background-color: transparent;
   font-family: inherit;
   min-height: 35px;
@@ -5468,8 +5468,8 @@ a:hover, a:active {
 }
 .main-navigation ul ul a {
   display: inline-block;
-  white-space: nowrap;
-  max-width: 200px;
+  width: 200px;
+  white-space: normal;
 }
 .main-navigation ul ul a:empty .main-navigation ul ul a {
   display: none;
@@ -5879,6 +5879,7 @@ a:hover, a:active {
   left: 0;
   right: 0;
   width: 100vw;
+  z-index: 1000;
 }
 
 #topbar {
@@ -8506,6 +8507,20 @@ Mini Cart Widget
 .widget_shopping_cart p.items-count {
   padding: 0 0 0 30px;
   font-weight: 500;
+}
+
+#secondary .widget_shopping_cart .widget_shopping_cart_content .proceed-to-cart-icon {
+  display: none;
+}
+#secondary .widget_shopping_cart .widget_shopping_cart_content p.items-count {
+  padding: 0;
+}
+#secondary .widget_shopping_cart .yith-proteo-mini-cart-content {
+  position: static;
+  opacity: 1;
+  visibility: visible;
+  box-shadow: none;
+  padding: 0;
 }
 
 /**
